fix: update modal styles for improved visibility and responsiveness

--- a/app/DeviceInvy/static/css/device.css
+++ b/app/DeviceInvy/static/css/device.css
@@ -267,12 +267,14 @@ tr:hover {
 
 /* Modal styles */
 .modal {
-  display: none; /* Hidden by default */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1000;
 }
@@ -301,6 +303,7 @@ tr:hover {
   .modal-content {
     padding: 18px 6px 16px 6px;
     max-width: 98vw;
+    max-height: 98vh;
   }
 }
 
@@ -319,6 +322,9 @@ tr:hover {
 }
 
 .modal-content .button-container {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
   margin-top: 24px;
 }
 
